# oibur-devops-andes

./: .env.example  .gitignore  Dockerfile  README.md  app.py  appspec.yaml  buildspec.yml  pyproject.toml  requirements.txt  taskdef.json
blacklist_service/: __init__.py  auth.py  models.py  schemas.py  settings.py
blacklist_service/resources/: blacklists.py  health.py
openspec/changes/new-relic-monitoring/: design.md  proposal.md  tasks.md
openspec/changes/new-relic-monitoring/specs/new-relic-agent/: spec.md
postman/: blacklist-microservice.collection.json  local.postman_environment.json  sync_postman_collection.sh
terraform/: alb.tf  codebuild.tf  codecommit.tf  codedeploy.tf  codepipeline.tf  ecr.tf  ecs.tf  iam.tf  locals.tf  main.tf  outputs.tf  rds.tf  s3.tf  ssm.tf  variables.tf  vpc.tf
tests/: stress_test.sh  stress_test_high_load.sh  test_api.py  test_postman_artifacts.py
